--- a/src/html/talk/talk-edit.html
+++ b/src/html/talk/talk-edit.html
@@ -22,7 +22,7 @@
 <body class="app">
     <section id="main" data-transition="">
         
-        <header data-title="Talk Users List" class="extended"></header>
+        <header data-title="Edit Talk" class="extended"></header>
         
         <nav data-control="groupbar">
 
