--- a/src/html/talk/talk-list.html
+++ b/src/html/talk/talk-list.html
@@ -2,7 +2,7 @@
 <html lang="es-ES">
 <head>
     <meta charset="UTF-8">
-    <title>List Talks</title>
+    <title>Talks List</title>
     
     <meta name="description" content="API RESTful lungojs client example">
     <meta name="author" content="Adolfo Sanz De Diego (@asanzdiego)">
