minnor bug in slides

--- a/slides/export/api-restful-lungojs-client.html
+++ b/slides/export/api-restful-lungojs-client.html
@@ -187,11 +187,11 @@ code > span.er { font-weight: bold; }
 </figure>
 <h2 id="aplicación"><a href="#aplicación"><span class="header-section-number">2.2</span> Aplicación</a></h2>
 <figure>
-<img src="../img/esquema-api-rest-09.png" alt="Esquema APIs RESTful 9" /><figcaption>Esquema APIs RESTful 9</figcaption>
+<img src="../img/esquema-api-rest-01.png" alt="Aplicación" /><figcaption>Aplicación</figcaption>
 </figure>
 <h2 id="plataforma"><a href="#plataforma"><span class="header-section-number">2.3</span> Plataforma</a></h2>
 <figure>
-<img src="../img/esquema-api-rest-09.png" alt="Esquema APIs RESTful 9" /><figcaption>Esquema APIs RESTful 9</figcaption>
+<img src="../img/esquema-api-rest-09.png" alt="Plataforma" /><figcaption>Plataforma</figcaption>
 </figure>
 <h2 id="quien-expone-apis"><a href="#quien-expone-apis"><span class="header-section-number">2.4</span> ¿Quien expone APIs?</a></h2>
 <figure>
