--- a/slides/export/api-restful-lungojs-client.slides.html
+++ b/slides/export/api-restful-lungojs-client.slides.html
@@ -163,12 +163,12 @@ code > span.er { color: #ff0000; font-weight: bold; }
 </section><section id="aplicación" class="slide level2">
 <h2><span class="header-section-number">2.2</span> Aplicación</h2>
 <figure>
-<img src="../img/esquema-api-rest-09.png" alt="Esquema APIs RESTful 9" /><figcaption>Esquema APIs RESTful 9</figcaption>
+<img src="../img/esquema-api-rest-01.png" alt="Aplicación" /><figcaption>Aplicación</figcaption>
 </figure>
 </section><section id="plataforma" class="slide level2">
 <h2><span class="header-section-number">2.3</span> Plataforma</h2>
 <figure>
-<img src="../img/esquema-api-rest-09.png" alt="Esquema APIs RESTful 9" /><figcaption>Esquema APIs RESTful 9</figcaption>
+<img src="../img/esquema-api-rest-09.png" alt="Plataforma" /><figcaption>Plataforma</figcaption>
 </figure>
 </section><section id="quien-expone-apis" class="slide level2">
 <h2><span class="header-section-number">2.4</span> ¿Quien expone APIs?</h2>
