--- a/slides/export/api-restful-lungojs-client.slides.html
+++ b/slides/export/api-restful-lungojs-client.slides.html
@@ -111,22 +111,33 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <li><p><strong>Formador Freelance</strong>:</p>
 <pre><code>- Java, Android
 - JavaScript, jQuery
-- JSF, Spring, Hibernate y Groovy&amp;Grails</code></pre></li>
+- JSF, Spring, Hibernate
+- Groovy &amp; Grails</code></pre></li>
 <li><p><strong>Me gusta programar</strong></p></li>
 </ul></li>
 </ul>
 </section><section id="hackalover" class="slide level2">
 <h2><span class="header-section-number">1.5</span> Hackalover</h2>
 <figure>
-<img src="../img/hackathon-lovers.png" />
+<img src="../img/hackathon-lovers-logo.png" />
 </figure>
 <ul>
 <li><p><strong>Para los amantes de los hackathones</strong></p></li>
 <li><p><strong>Meetup</strong>: <a href="http://www.meetup.com/Hackathon-Lovers/">http://www.meetup.com/Hackathon-Lovers/</a></p></li>
 <li><p><strong>Twitter</strong>: <a href="http://twitter.com/HackathonLovers">http://twitter.com/HackathonLovers</a></p></li>
 </ul>
+</section><section id="tweets-sentiment" class="slide level2">
+<h2><span class="header-section-number">1.6</span> Tweets Sentiment</h2>
+<figure>
+<img src="../img/tweets-sentiment-logo.png" />
+</figure>
+<ul>
+<li><p>Es un <strong>analizador de tweets</strong> que extrae información semántica para conocer si el sentimiento general de los tweets de un determinado tema es positivo o negativo.</p></li>
+<li><p><strong>Web</strong>: <a href="http://tweetssentiment.com/">http://tweetssentiment.com/</a></p></li>
+<li><p><strong>Twitter</strong>: <a href="http://twitter.com/TweetsSentiment">http://twitter.com/TweetsSentiment</a></p></li>
+</ul>
 </section><section id="donde-encontrarme" class="slide level2">
-<h2><span class="header-section-number">1.6</span> ¿Donde encontrarme?</h2>
+<h2><span class="header-section-number">1.7</span> ¿Donde encontrarme?</h2>
 <ul>
 <li><p>Mi nick: <strong>asanzdiego</strong></p></li>
 <li><p>AboutMe: <strong><a href="http://about.me/asanzdiego">http://about.me/asanzdiego</a></strong></p>
@@ -137,16 +148,46 @@ code > span.er { color: #ff0000; font-weight: bold; }
 <li>LinkedIn: <a href="http://www.linkedin.com/in/asanzdiego">http://www.linkedin.com/in/asanzdiego</a></li>
 </ul></li>
 </ul>
+</section><section id="créditos" class="slide level2">
+<h2><span class="header-section-number">1.8</span> Créditos</h2>
+<ul>
+<li><p>Estas <strong>transparencias</strong> están hechas con:</p>
+<ul>
+<li><a href="https://github.com/asanzdiego/deck.js-pandoc-slides">https://github.com/asanzdiego/deck.js-pandoc-slides</a></li>
+</ul></li>
+</ul>
 </section><section id="licencia" class="slide level2">
-<h2><span class="header-section-number">1.7</span> Licencia</h2>
+<h2><span class="header-section-number">1.9</span> Licencia</h2>
 <ul>
 <li>Estas <strong>transparencias</strong> están bajo una licencia:
 <ul>
-<li>Creative Commons Reconocimiento-CompartirIgual 3.0 <a href="http://creativecommons.org/licenses/by-sa/3.0/es/">http://creativecommons.org/licenses/by-sa/3.0/es/</a></li>
+<li><a href="http://creativecommons.org/licenses/by-sa/3.0/es/">Creative Commons Reconocimiento-CompartirIgual 3.0</a></li>
 </ul></li>
-<li>El <strong>código fuente</strong> de los programas están bajo una licencia:
+<li>El <strong>código</strong> de los programas están bajo una licencia:
 <ul>
-<li>GPL 3.0 <a href="http://www.viti.es/gnu/licenses/gpl.html">http://www.viti.es/gnu/licenses/gpl.html</a></li>
+<li><a href="http://www.viti.es/gnu/licenses/gpl.html">GPL 3.0</a></li>
+</ul></li>
+</ul>
+</section><section id="fuentes" class="slide level2">
+<h2><span class="header-section-number">1.10</span> Fuentes</h2>
+<ul>
+<li><p>Transparencias:</p>
+<ul>
+<li><p>SlideShare:</p>
+<ul>
+<li><a href="http://www.slideshare.net/asanzdiego/api-restfullungojsclientbeamer">http://www.slideshare.net/asanzdiego/api-restfullungojsclientbeamer</a></li>
+</ul></li>
+<li><p>GitHub Pages:</p>
+<ul>
+<li><a href="http://asanzdiego.github.io/curso-api-restful-lungojs-client-2013/slides/export/api-restful-lungojs-client.slides.html">http://asanzdiego.github.io/curso-api-restful-lungojs-client-2013/slides/export/api-restful-lungojs-client.slides.html</a></li>
+</ul></li>
+</ul></li>
+<li><p>Código:</p>
+<ul>
+<li><p>GitHub:</p>
+<ul>
+<li><a href="http://github.com/asanzdiego/curso-api-lungojs-client-server-2013/tree/master/src">http://github.com/asanzdiego/curso-api-restful-lungojs-client-2013/tree/master/src</a></li>
+</ul></li>
 </ul></li>
 </ul>
 </section>
