--- a/slides/export/api-restful-lungojs-client.html
+++ b/slides/export/api-restful-lungojs-client.html
@@ -46,8 +46,11 @@ code > span.er { font-weight: bold; }
 <li><a href="#adolfo-sanz-de-diego"><span class="toc-section-number">1.3</span> Adolfo Sanz De Diego</a></li>
 <li><a href="#mi-cv-resumido"><span class="toc-section-number">1.4</span> Mi CV resumido</a></li>
 <li><a href="#hackalover"><span class="toc-section-number">1.5</span> Hackalover</a></li>
-<li><a href="#donde-encontrarme"><span class="toc-section-number">1.6</span> ¿Donde encontrarme?</a></li>
-<li><a href="#licencia"><span class="toc-section-number">1.7</span> Licencia</a></li>
+<li><a href="#tweets-sentiment"><span class="toc-section-number">1.6</span> Tweets Sentiment</a></li>
+<li><a href="#donde-encontrarme"><span class="toc-section-number">1.7</span> ¿Donde encontrarme?</a></li>
+<li><a href="#créditos"><span class="toc-section-number">1.8</span> Créditos</a></li>
+<li><a href="#licencia"><span class="toc-section-number">1.9</span> Licencia</a></li>
+<li><a href="#fuentes"><span class="toc-section-number">1.10</span> Fuentes</a></li>
 </ul></li>
 <li><a href="#apis-para-qué"><span class="toc-section-number">2</span> APIs ¿Para qué?</a><ul>
 <li><a href="#aplicación-estándar"><span class="toc-section-number">2.1</span> Aplicación estándar</a></li>
@@ -150,20 +153,30 @@ code > span.er { font-weight: bold; }
 <li><p><strong>Formador Freelance</strong>:</p>
 <pre><code>- Java, Android
 - JavaScript, jQuery
-- JSF, Spring, Hibernate y Groovy&amp;Grails</code></pre></li>
+- JSF, Spring, Hibernate
+- Groovy &amp; Grails</code></pre></li>
 <li><p><strong>Me gusta programar</strong></p></li>
 </ul></li>
 </ul>
 <h2 id="hackalover"><a href="#hackalover"><span class="header-section-number">1.5</span> Hackalover</a></h2>
 <figure>
-<img src="../img/hackathon-lovers.png" />
+<img src="../img/hackathon-lovers-logo.png" />
 </figure>
 <ul>
 <li><p><strong>Para los amantes de los hackathones</strong></p></li>
 <li><p><strong>Meetup</strong>: <a href="http://www.meetup.com/Hackathon-Lovers/">http://www.meetup.com/Hackathon-Lovers/</a></p></li>
 <li><p><strong>Twitter</strong>: <a href="http://twitter.com/HackathonLovers">http://twitter.com/HackathonLovers</a></p></li>
 </ul>
-<h2 id="donde-encontrarme"><a href="#donde-encontrarme"><span class="header-section-number">1.6</span> ¿Donde encontrarme?</a></h2>
+<h2 id="tweets-sentiment"><a href="#tweets-sentiment"><span class="header-section-number">1.6</span> Tweets Sentiment</a></h2>
+<figure>
+<img src="../img/tweets-sentiment-logo.png" />
+</figure>
+<ul>
+<li><p>Es un <strong>analizador de tweets</strong> que extrae información semántica para conocer si el sentimiento general de los tweets de un determinado tema es positivo o negativo.</p></li>
+<li><p><strong>Web</strong>: <a href="http://tweetssentiment.com/">http://tweetssentiment.com/</a></p></li>
+<li><p><strong>Twitter</strong>: <a href="http://twitter.com/TweetsSentiment">http://twitter.com/TweetsSentiment</a></p></li>
+</ul>
+<h2 id="donde-encontrarme"><a href="#donde-encontrarme"><span class="header-section-number">1.7</span> ¿Donde encontrarme?</a></h2>
 <ul>
 <li><p>Mi nick: <strong>asanzdiego</strong></p></li>
 <li><p>AboutMe: <strong><a href="http://about.me/asanzdiego">http://about.me/asanzdiego</a></strong></p>
@@ -174,15 +187,43 @@ code > span.er { font-weight: bold; }
 <li>LinkedIn: <a href="http://www.linkedin.com/in/asanzdiego">http://www.linkedin.com/in/asanzdiego</a></li>
 </ul></li>
 </ul>
-<h2 id="licencia"><a href="#licencia"><span class="header-section-number">1.7</span> Licencia</a></h2>
+<h2 id="créditos"><a href="#créditos"><span class="header-section-number">1.8</span> Créditos</a></h2>
+<ul>
+<li><p>Estas <strong>transparencias</strong> están hechas con:</p>
+<ul>
+<li><a href="https://github.com/asanzdiego/deck.js-pandoc-slides">https://github.com/asanzdiego/deck.js-pandoc-slides</a></li>
+</ul></li>
+</ul>
+<h2 id="licencia"><a href="#licencia"><span class="header-section-number">1.9</span> Licencia</a></h2>
 <ul>
 <li>Estas <strong>transparencias</strong> están bajo una licencia:
 <ul>
-<li>Creative Commons Reconocimiento-CompartirIgual 3.0 <a href="http://creativecommons.org/licenses/by-sa/3.0/es/">http://creativecommons.org/licenses/by-sa/3.0/es/</a></li>
+<li><a href="http://creativecommons.org/licenses/by-sa/3.0/es/">Creative Commons Reconocimiento-CompartirIgual 3.0</a></li>
 </ul></li>
-<li>El <strong>código fuente</strong> de los programas están bajo una licencia:
+<li>El <strong>código</strong> de los programas están bajo una licencia:
 <ul>
-<li>GPL 3.0 <a href="http://www.viti.es/gnu/licenses/gpl.html">http://www.viti.es/gnu/licenses/gpl.html</a></li>
+<li><a href="http://www.viti.es/gnu/licenses/gpl.html">GPL 3.0</a></li>
+</ul></li>
+</ul>
+<h2 id="fuentes"><a href="#fuentes"><span class="header-section-number">1.10</span> Fuentes</a></h2>
+<ul>
+<li><p>Transparencias:</p>
+<ul>
+<li><p>SlideShare:</p>
+<ul>
+<li><a href="http://www.slideshare.net/asanzdiego/api-restfullungojsclientbeamer">http://www.slideshare.net/asanzdiego/api-restfullungojsclientbeamer</a></li>
+</ul></li>
+<li><p>GitHub Pages:</p>
+<ul>
+<li><a href="http://asanzdiego.github.io/curso-api-restful-lungojs-client-2013/slides/export/api-restful-lungojs-client.slides.html">http://asanzdiego.github.io/curso-api-restful-lungojs-client-2013/slides/export/api-restful-lungojs-client.slides.html</a></li>
+</ul></li>
+</ul></li>
+<li><p>Código:</p>
+<ul>
+<li><p>GitHub:</p>
+<ul>
+<li><a href="http://github.com/asanzdiego/curso-api-lungojs-client-server-2013/tree/master/src">http://github.com/asanzdiego/curso-api-restful-lungojs-client-2013/tree/master/src</a></li>
+</ul></li>
 </ul></li>
 </ul>
 <h1 id="apis-para-qué"><a href="#apis-para-qué"><span class="header-section-number">2</span> APIs ¿Para qué?</a></h1>
